Updated app.py and index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,6 @@
 {%if thoughts%}
-Thought
     {%for thought in thoughts%}
-        {{thought.text}}
+        {{thought}}
     {%endfor%}
 {%else%}
     No content available
