--- a/templates/index.html
+++ b/templates/index.html
@@ -55,7 +55,7 @@
     <div class="media"><img src="assets/img/download (b).jpg" class="mr-3">
         <div class="media-body">
             <h5>Kangaroo</h5>
-            <p>A kangeroo is an Austrialian animal known for jumping at extremely high heights.It has a pouch in which it keeps its baby for protection.</p><input class="form-control-plaintext" type="text" value="Plain Text Value" readonly="">
+            <p>A kangaroo is an Austrialian animal known for jumping at extremely high heights.It has a pouch in which it keeps its baby for protection.</p><input class="form-control-plaintext" type="text" value="Plain Text Value" readonly="">
             <div><a class="btn btn-primary active" data-toggle="collapse" aria-expanded="false" aria-controls="collapse-1" role="button" href="#collapse-1">Comments</a>
                 <div class="collapse" id="collapse-1">
                     <p>Collapse content.</p>
