Added send_js function

--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
             <p></p>
         </div>
     </div>
-    <div class="media"><img src="assets/img/download (b).jpg" class="mr-3">
+    <div class="media"><img src="static/img/download (b).jpg" class="mr-3">
         <div class="media-body">
             <h5>Kangaroo</h5>
             <p>A kangaroo is an Austrialian animal known for jumping at extremely high heights.It has a pouch in which it keeps its baby for protection.</p><input class="form-control-plaintext" type="text" value="Plain Text Value" readonly="">
@@ -70,15 +70,15 @@
                 <p class="text-center">Nunc luctus in metus eget fringilla. Aliquam sed justo ligula. Vestibulum nibh erat, pellentesque ut laoreet vitae. </p>
             </div>
             <div class="row articles">
-                <div class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" src="assets/img/desk.jpg"></a>
+                <div class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" src="static/img/desk.jpg"></a>
                     <h3 class="name">Article Title</h3>
                     <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p><a href="#" class="action"><i class="fa fa-arrow-circle-right"></i></a></div>
                 <div
-                    class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" src="assets/img/building.jpg"></a>
+                    class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" src="static/img/building.jpg"></a>
                     <h3 class="name">Article Title</h3>
                     <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p><a href="#" class="action"><i class="fa fa-arrow-circle-right"></i></a></div>
             <div
-                class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" src="assets/img/loft.jpg"></a>
+                class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" src="static/img/loft.jpg"></a>
                 <h3 class="name">Article Title</h3>
                 <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p><a href="#" class="action"><i class="fa fa-arrow-circle-right"></i></a></div>
     </div>
@@ -95,7 +95,7 @@
                     <div class="box">
                         <p class="description">Bundled notes - Like Costudy &nbsp;- -ae the way forward. The string point of CoStudy is that you learn apply directly. You are able to pass exams with ease.</p>
                     </div>
-                    <div class="author"><img class="rounded-circle" src="assets/img/1.jpg">
+                    <div class="author"><img class="rounded-circle" src="static/img/1.jpg">
                         <h5 class="name">Ben Johnson</h5>
                         <p class="title">Central University College</p>
                     </div>
@@ -104,7 +104,7 @@
                     <div class="box">
                         <p class="description">Learning couldn't have been any fun without CoStudy. I've read a lot of short notes that has helped.</p>
                     </div>
-                    <div class="author"><img class="rounded-circle" src="assets/img/3.jpg">
+                    <div class="author"><img class="rounded-circle" src="static/img/3.jpg">
                         <h5 class="name">Carl Kent</h5>
                         <p class="title">Lancaster University</p>
                     </div>
@@ -113,7 +113,7 @@
                     <div class="box">
                         <p class="description">I used to struggle with learning then a friend introduced me to CoStudy. Since then I've been dong great. I have a raise in my GPA.</p>
                     </div>
-                    <div class="author"><img class="rounded-circle" src="assets/img/2.jpg">
+                    <div class="author"><img class="rounded-circle" src="static/img/2.jpg">
                         <h5 class="name">Emily Clark</h5>
                         <p class="title">University of Ghana</p>
                     </div>
