Added send_js function

--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
     </div>
     <div class="highlight-clean">
         <div></div>
-        <div class="jumbotron">
+        <div class="jumbotron"><img src="static/img/desk.jpg">
             <h1 class="text-center text-white"><br>CoStudy<br><br></h1>
             <p class="text-center text-white"><br>Where learning is fun and done at your convenience<br><br></p>
             <p></p>
@@ -54,7 +54,7 @@
     </div>
     <div class="media"><img src="static/img/download (b).jpg" class="mr-3">
         <div class="media-body">
-            <h5>Kangaroo</h5>
+            <h5>kangaroo    </h5>
             <p>A kangaroo is an Austrialian animal known for jumping at extremely high heights.It has a pouch in which it keeps its baby for protection.</p><input class="form-control-plaintext" type="text" value="Plain Text Value" readonly="">
             <div><a class="btn btn-primary active" data-toggle="collapse" aria-expanded="false" aria-controls="collapse-1" role="button" href="#collapse-1">Comments</a>
                 <div class="collapse" id="collapse-1">
