Added send_js function

--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
     </div>
     <div class="highlight-clean">
         <div></div>
-        <div class="jumbotron"><img src="static/img/desk.jpg">
+        <div class="jumbotron"><img src="static/img/desk.jpg" style="background-repeat:no-repeat; background-size:cover;">
             <h1 class="text-center text-white"><br>CoStudy<br><br></h1>
             <p class="text-center text-white"><br>Where learning is fun and done at your convenience<br><br></p>
             <p></p>
