Changed some files

--- a/templates/AboutUs.html
+++ b/templates/AboutUs.html
@@ -5,24 +5,24 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
-    <link rel="stylesheet" href="assets/css/Article-List.css">
-    <link rel="stylesheet" href="assets/css/Footer-Basic.css">
-    <link rel="stylesheet" href="assets/css/Footer-Clean.css">
-    <link rel="stylesheet" href="assets/css/Footer-Dark.css">
-    <link rel="stylesheet" href="assets/css/Highlight-Blue.css">
-    <link rel="stylesheet" href="assets/css/Highlight-Clean.css">
+    <link rel="stylesheet" href="static/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="static/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="static/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="static/css/Article-List.css">
+    <link rel="stylesheet" href="static/css/Footer-Basic.css">
+    <link rel="stylesheet" href="static/css/Footer-Clean.css">
+    <link rel="stylesheet" href="static/css/Footer-Dark.css">
+    <link rel="stylesheet" href="static/css/Highlight-Blue.css">
+    <link rel="stylesheet" href="static/css/Highlight-Clean.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css">
-    <link rel="stylesheet" href="assets/css/Login-Form-Dark.css">
-    <link rel="stylesheet" href="assets/css/Navigation-Clean.css">
-    <link rel="stylesheet" href="assets/css/Navigation-with-Button.css">
-    <link rel="stylesheet" href="assets/css/Registration-Form-with-Photo.css">
-    <link rel="stylesheet" href="assets/css/Simple-Slider.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="assets/css/Team-Clean.css">
-    <link rel="stylesheet" href="assets/css/Testimonials.css">
+    <link rel="stylesheet" href="static/css/Login-Form-Dark.css">
+    <link rel="stylesheet" href="static/css/Navigation-Clean.css">
+    <link rel="stylesheet" href="static/css/Navigation-with-Button.css">
+    <link rel="stylesheet" href="static/css/Registration-Form-with-Photo.css">
+    <link rel="stylesheet" href="static/css/Simple-Slider.css">
+    <link rel="stylesheet" href="static/css/styles.css">
+    <link rel="stylesheet" href="static/css/Team-Clean.css">
+    <link rel="stylesheet" href="static/css/Testimonials.css">
 </head>
 
 <body>
@@ -32,9 +32,9 @@
                 <div class="collapse navbar-collapse"
                     id="navcol-1">
                     <ul class="nav navbar-nav ml-auto">
-                        <li class="nav-item" role="presentation"><a class="nav-link text-white active" href="index.html">Home</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link text-white" href="SignUp.html">Sign Up</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link text-white" href="Login.html">Login</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link text-white active" href="/">Home</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link text-white" href="/sign-up">Sign Up</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link text-white" href="/login">Login</a></li>
                     </ul>
                 </div>
             </div>
@@ -54,19 +54,19 @@
                 <p class="text-center"><br>The breakdown into the profiles of the amazing people behind CoStudy.<br><br></p>
             </div>
             <div class="row people">
-                <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="assets/img/IMG-20180717-WA0006.jpg">
+                <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="static/img/IMG-20180717-WA0006.jpg">
                     <h3 class="name">Kwadwo Asamoa</h3>
                     <p class="title">Musician</p>
                     <p class="description"><br>Kojo Asamoa is an enthustiastic student of the University of Ghana in level 300 studying Information Techonology.He aims at&nbsp;<br>improving the technological world</p>
                     <div class="social"><a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
                 </div>
-                <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="assets/img/PhotoGrid_1479809065625.png">
+                <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="static/img/PhotoGrid_1479809065625.png">
                     <h3 class="name">Anna Atuahene</h3>
                     <p class="title">Artist</p>
                     <p class="description"><br>Anna Atuahene, the only female of the team is very passionate about women in STEM. She therefore aims to break the feminine barrier in relation to women in technology<br><br></p>
                     <div class="social"><a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
                 </div>
-                <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="assets/img/IMG-20180717-WA0005.jpg">
+                <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="static/img/IMG-20180717-WA0005.jpg">
                     <h3 class="name">Perry Larstey</h3>
                     <p class="title">Stylist<br></p>
                     <p class="description"><br>Perry Lartsey is a &nbsp;Computer Engineering Student at the Universit of Ghana in level 300. He is &nbsp;conservative student who has a great passion for technology especially ,the field of engineering<br><br></p>
@@ -79,19 +79,19 @@
         <footer>
             <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
             <ul class="list-inline">
-                <li class="list-inline-item"><a href="Homepage.html">Home</a></li>
-                <li class="list-inline-item"><a href="Posts.html">Services</a></li>
-                <li class="list-inline-item"><a href="AboutUs.html">About</a></li>
+                <li class="list-inline-item"><a href="/index">Home</a></li>
+                <li class="list-inline-item"><a href="/post">Services</a></li>
+                <li class="list-inline-item"><a href="/about">About</a></li>
                 <li class="list-inline-item"><a href="#">Terms</a></li>
                 <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
             </ul>
             <p class="copyright">Company Name © 2017</p>
         </footer>
     </div>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="static/js/jquery.min.js"></script>
+    <script src="static/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/js/swiper.jquery.min.js"></script>
-    <script src="assets/js/Simple-Slider.js"></script>
+    <script src="static/js/Simple-Slider.js"></script>
 </body>
 
 </html>
