--- a/templates/Profile.html
+++ b/templates/Profile.html
@@ -5,24 +5,24 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
-    <link rel="stylesheet" href="assets/css/Article-List.css">
-    <link rel="stylesheet" href="assets/css/Footer-Basic.css">
-    <link rel="stylesheet" href="assets/css/Footer-Clean.css">
-    <link rel="stylesheet" href="assets/css/Footer-Dark.css">
-    <link rel="stylesheet" href="assets/css/Highlight-Blue.css">
-    <link rel="stylesheet" href="assets/css/Highlight-Clean.css">
+    <link rel="stylesheet" href="static/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="static/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="static/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="static/css/Article-List.css">
+    <link rel="stylesheet" href="static/css/Footer-Basic.css">
+    <link rel="stylesheet" href="static/css/Footer-Clean.css">
+    <link rel="stylesheet" href="static/css/Footer-Dark.css">
+    <link rel="stylesheet" href="static/css/Highlight-Blue.css">
+    <link rel="stylesheet" href="static/css/Highlight-Clean.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css">
-    <link rel="stylesheet" href="assets/css/Login-Form-Dark.css">
-    <link rel="stylesheet" href="assets/css/Navigation-Clean.css">
-    <link rel="stylesheet" href="assets/css/Navigation-with-Button.css">
-    <link rel="stylesheet" href="assets/css/Registration-Form-with-Photo.css">
-    <link rel="stylesheet" href="assets/css/Simple-Slider.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="assets/css/Team-Clean.css">
-    <link rel="stylesheet" href="assets/css/Testimonials.css">
+    <link rel="stylesheet" href="static/css/Login-Form-Dark.css">
+    <link rel="stylesheet" href="static/css/Navigation-Clean.css">
+    <link rel="stylesheet" href="static/css/Navigation-with-Button.css">
+    <link rel="stylesheet" href="static/css/Registration-Form-with-Photo.css">
+    <link rel="stylesheet" href="static/css/Simple-Slider.css">
+    <link rel="stylesheet" href="static/css/styles.css">
+    <link rel="stylesheet" href="static/css/Team-Clean.css">
+    <link rel="stylesheet" href="static/css/Testimonials.css">
 </head>
 
 <body>
@@ -52,27 +52,27 @@
                 </form>
             </div>
         </div>
-    </nav><img class="rounded-circle" src="assets/img/3.jpg">
+    </nav><img class="rounded-circle" src="static/img/3.jpg">
     <div class="card">
         <div class="card-body">
             <h4 class="card-title">Jared Radricks</h4>
             <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p><button class="btn btn-primary" type="button">Upload Photo</button></div>
     </div>
-    <div class="media"><img class="img-thumbnail mr-3" src="assets/img/3.jpg">
+    <div class="media"><img class="img-thumbnail mr-3" src="static/img/3.jpg">
         <div class="media-body">
             <h5>Evolution of Man</h5>
             <p>My personal opinion of humans on earth isthat we happened to just appear on the surface of the earth from another planet after the meteorite wiped out all the dinasaurs.Just my thoughts though :)</p><a class="btn btn-primary" role="button"
                 href="Posts.html">More</a></div>
     </div>
-    <div class="media"><img class="img-thumbnail mr-3" src="assets/img/3.jpg">
+    <div class="media"><img class="img-thumbnail mr-3" src="static/img/3.jpg">
         <div class="media-body">
             <h5>Pyschology of Cats</h5>
             <p>Cats are a very strange group of feline.I just discovered they purr to confuse humans that they're communicating amongst themselves but rather a mechanism to confuse us</p><a class="btn btn-primary" role="button" href="Posts.html">More</a></div>
     </div>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="static/js/jquery.min.js"></script>
+    <script src="static/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/js/swiper.jquery.min.js"></script>
-    <script src="assets/js/Simple-Slider.js"></script>
+    <script src="static/js/Simple-Slider.js"></script>
 </body>
 
 </html>
