--- a/templates/Posts.html
+++ b/templates/Posts.html
@@ -5,24 +5,24 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
-    <link rel="stylesheet" href="assets/css/Article-List.css">
-    <link rel="stylesheet" href="assets/css/Footer-Basic.css">
-    <link rel="stylesheet" href="assets/css/Footer-Clean.css">
-    <link rel="stylesheet" href="assets/css/Footer-Dark.css">
-    <link rel="stylesheet" href="assets/css/Highlight-Blue.css">
-    <link rel="stylesheet" href="assets/css/Highlight-Clean.css">
+    <link rel="stylesheet" href="static/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="static/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="static/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="static/css/Article-List.css">
+    <link rel="stylesheet" href="static/css/Footer-Basic.css">
+    <link rel="stylesheet" href="static/css/Footer-Clean.css">
+    <link rel="stylesheet" href="static/css/Footer-Dark.css">
+    <link rel="stylesheet" href="static/css/Highlight-Blue.css">
+    <link rel="stylesheet" href="static/css/Highlight-Clean.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css">
-    <link rel="stylesheet" href="assets/css/Login-Form-Dark.css">
-    <link rel="stylesheet" href="assets/css/Navigation-Clean.css">
-    <link rel="stylesheet" href="assets/css/Navigation-with-Button.css">
-    <link rel="stylesheet" href="assets/css/Registration-Form-with-Photo.css">
-    <link rel="stylesheet" href="assets/css/Simple-Slider.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="assets/css/Team-Clean.css">
-    <link rel="stylesheet" href="assets/css/Testimonials.css">
+    <link rel="stylesheet" href="static/css/Login-Form-Dark.css">
+    <link rel="stylesheet" href="static/css/Navigation-Clean.css">
+    <link rel="stylesheet" href="static/css/Navigation-with-Button.css">
+    <link rel="stylesheet" href="static/css/Registration-Form-with-Photo.css">
+    <link rel="stylesheet" href="static/css/Simple-Slider.css">
+    <link rel="stylesheet" href="static/css/styles.css">
+    <link rel="stylesheet" href="static/css/Team-Clean.css">
+    <link rel="stylesheet" href="static/css/Testimonials.css">
 </head>
 
 <body>
@@ -34,10 +34,10 @@
                     <div class="form-group"><label for="search-field"><i class="fa fa-search"></i></label><input class="form-control search-field" type="search" name="search" placeholder="Search " id="search-field"></div>
                 </form>
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link text-white active" href="Homepage.html">Home</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link text-white" href="Prpfile.html">Profile</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link text-white" href="AboutUs.html">About Us</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link text-white" href="Homepage.html">Log Out</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link text-white active" href="/">Home</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link text-white" href="/profile">Profile</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link text-white" href="/about">About Us</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link text-white" href="/logout">Log Out</a></li>
                 </ul>
             </div>
         </div>
@@ -50,7 +50,7 @@
         <div class="row projects">
             <div class="col-sm-6 item">
                 <div class="row">
-                    <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/desk.jpg"></a></div>
+                    <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="static/img/desk.jpg"></a></div>
                     <div class="col">
                         <h3 class="name">Software engineering</h3>
                         <p class="description"><br>Artificial intelligence systems perform some tasks better than humans. That’s a fact.&nbsp;In our hospitals, for example, AI systems are being used in medical imaging to analyse images scans to help radiologists to diagnose
@@ -60,7 +60,7 @@
             </div>
             <div class="col-sm-6 item">
                 <div class="row">
-                    <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/building.jpg"></a></div>
+                    <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="static/img/building.jpg"></a></div>
                     <div class="col">
                         <h3 class="name">Computer Science/<br>Firewalls and antivirus software aren’t that important<br><br></h3>
                         <p class="description"><br>Most of today’s threats are client-side threats, initiated by the end-user. This means they are already past all the firewalls (e.g., network or host) that were put in their way to prevent them from reaching the user’s desktop.
@@ -70,7 +70,7 @@
             </div>
             <div class="col-sm-6 item">
                 <div class="row">
-                    <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/3.jpg"></a></div>
+                    <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="static/img/3.jpg"></a></div>
                     <div class="col">
                         <h3 class="name">Evolution of Man</h3>
                         <p class="description"><br>My personal opinion of humans on earth isthat we happened to just appear on the surface of the earth from another planet after the meteorite wiped out all the dinasaurs.Just my thoughts though :)<br><br></p>
@@ -79,7 +79,7 @@
             </div>
             <div class="col-sm-6 item">
                 <div class="row">
-                    <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/2.jpg"></a></div>
+                    <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="static/img/2.jpg"></a></div>
                     <div class="col">
                         <h3 class="name">Psychology of Cats</h3>
                         <p class="description"><br>Cats are a very strange group of feline.I just discovered they purr to confuse humans that they're communicating amongst themselves but rather a mechanism to confuse us<br><br></p>
@@ -93,19 +93,19 @@
         <footer>
             <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
             <ul class="list-inline">
-                <li class="list-inline-item"><a href="Homepage.html">Home</a></li>
-                <li class="list-inline-item"><a href="Posts.html">Services</a></li>
-                <li class="list-inline-item"><a href="AboutUs.html">About</a></li>
+                <li class="list-inline-item"><a href="/">Home</a></li>
+                <li class="list-inline-item"><a href="/post">Services</a></li>
+                <li class="list-inline-item"><a href="/about">About</a></li>
                 <li class="list-inline-item"><a href="#">Terms</a></li>
                 <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
             </ul>
             <p class="copyright">Company Name © 2017</p>
         </footer>
     </div>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="static/js/jquery.min.js"></script>
+    <script src="static/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/js/swiper.jquery.min.js"></script>
-    <script src="assets/js/Simple-Slider.js"></script>
+    <script src="static/js/Simple-Slider.js"></script>
 </body>
 
 </html>
