--- a/templates/index.html
+++ b/templates/index.html
@@ -33,12 +33,12 @@
                 <div class="collapse navbar-collapse"
                     id="navcol-1">
                     <ul class="nav navbar-nav ml-auto">
-                        <li class="nav-item" role="presentation"><a class="nav-link text-white-50 active" href="index.html">Home</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link text-white-50" href="AboutUs.html">About Us</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link text-white-50" href="Login.html">Login</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link text-white-50 active" href="/">Home</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link text-white-50" href='/about'>About Us</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link text-white-50" href="/login">Login</a></li>
                     </ul>
                     <ul class="nav navbar-nav">
-                        <li class="nav-item" role="presentation"><a class="nav-link text-white-50" href="SignUp.html">Sign Up</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link text-white-50" href="/sign-up">Sign Up</a></li>
                     </ul>
                 </div>
             </div>
