Modified a lot of things

--- a/templates/AboutUs.html
+++ b/templates/AboutUs.html
@@ -28,11 +28,11 @@
 <body>
     <div>
         <nav class="navbar navbar-light navbar-expand-md fixed-top bg-dark navigation-clean">
-            <div class="container"><a class="navbar-brand text-white" href="#">CoStudy</a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="container"><a class="navbar-brand text-white" href="/">CoStudy</a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse"
                     id="navcol-1">
                     <ul class="nav navbar-nav ml-auto">
-                        <li class="nav-item" role="presentation"><a class="nav-link text-white active" href="/">Home</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link text-white" href="/">Home</a></li>
                         <li class="nav-item" role="presentation"><a class="nav-link text-white" href="/sign-up">Sign Up</a></li>
                         <li class="nav-item" role="presentation"><a class="nav-link text-white" href="/login">Login</a></li>
                     </ul>
@@ -56,19 +56,19 @@
             <div class="row people">
                 <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="static/img/IMG-20180717-WA0006.jpg">
                     <h3 class="name">Kwadwo Asamoa</h3>
-                    <p class="title">Musician</p>
+                    <p class="title">Back-end developer</p>
                     <p class="description"><br>Kojo Asamoa is an enthustiastic student of the University of Ghana in level 300 studying Information Techonology.He aims at&nbsp;<br>improving the technological world</p>
                     <div class="social"><a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
                 </div>
                 <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="static/img/PhotoGrid_1479809065625.png">
                     <h3 class="name">Anna Atuahene</h3>
-                    <p class="title">Artist</p>
+                    <p class="title">Front-end developer </p>
                     <p class="description"><br>Anna Atuahene, the only female of the team is very passionate about women in STEM. She therefore aims to break the feminine barrier in relation to women in technology<br><br></p>
                     <div class="social"><a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
                 </div>
                 <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="static/img/IMG-20180717-WA0005.jpg">
                     <h3 class="name">Perry Larstey</h3>
-                    <p class="title">Stylist<br></p>
+                    <p class="title">Research<br></p>
                     <p class="description"><br>Perry Lartsey is a &nbsp;Computer Engineering Student at the Universit of Ghana in level 300. He is &nbsp;conservative student who has a great passion for technology especially ,the field of engineering<br><br></p>
                     <div class="social"><a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
                 </div>
