--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
     <div></div>
     <div>
         <nav class="navbar navbar-dark navbar-expand-md fixed-top bg-dark navigation-clean">
-            <div class="container"><a class="navbar-brand text-white-50" href="#">CoStudy</a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="container"><a class="navbar-brand text-white-50" href="/">CoStudy</a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse"
                     id="navcol-1">
                     <ul class="nav navbar-nav ml-auto">
@@ -48,19 +48,8 @@
         <div></div>
         <div class="jumbotron">
             <h1 class="text-center text-white"><br>CoStudy<br><br></h1>
-            <p class="text-center text-white"><br>Where learning is fun and done at your convenience<br><br></p>
+            <p class="text-center text-white"><br>Everyone is your study mate<br><br></p>
             <p></p>
-        </div>
-    </div>
-    <div class="media"><img src="static/img/download (b).jpg" class="mr-3">
-        <div class="media-body">
-            <h5>kangaroo    </h5>
-            <p>A kangaroo is an Austrialian animal known for jumping at extremely high heights.It has a pouch in which it keeps its baby for protection.</p><input class="form-control-plaintext" type="text" value="Plain Text Value" readonly="">
-            <div><a class="btn btn-primary active" data-toggle="collapse" aria-expanded="false" aria-controls="collapse-1" role="button" href="#collapse-1">Comments</a>
-                <div class="collapse" id="collapse-1">
-                    <p>Collapse content.</p>
-                </div>
-            </div>
         </div>
     </div>
     <div class="article-list">
