--- a/templates/Login.html
+++ b/templates/Login.html
@@ -27,11 +27,11 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-md bg-dark navigation-clean">
-        <div class="container"><a class="navbar-brand text-white" href="#">CoStudy</a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand text-white" href="/">CoStudy</a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse"
                 id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link text-white active" href="/">Home</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link text-white" href="/">Home</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link text-white" href="/about">About Us</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="/sign-up">Sign Up</a></li>
                 </ul>
@@ -39,12 +39,12 @@
         </div>
     </nav>
     <div class="login-dark">
-        <form method="post" action='login'>
+        <form method="post" action='/'>
             <h2 class="sr-only">Login Form</h2>
             <div class="illustration"><i class="icon ion-ios-locked-outline"></i></div>
             <div class="form-group"><input class="form-control" type="email" name="email" placeholder="Email"></div>
             <div class="form-group"><input class="form-control" type="password" name="password" placeholder="Password"></div>
-            <div class="form-group"><a class="btn btn-primary btn-block" role="button" href="/profile">Log In</a></div><a href="gmail.com" class="forgot">Forgot your email or password?</a></form>
+            <div class="form-group"><a class="btn btn-primary btn-block" role="button" href="/">Log In</a></div><a href="gmail.com" class="forgot">Forgot your email or password?</a></form>
     </div>
     <div class="footer-basic">
         <footer>
