--- a/templates/SignUp.html
+++ b/templates/SignUp.html
@@ -27,11 +27,11 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-md fixed-top bg-dark navigation-clean">
-        <div class="container"><a class="navbar-brand text-white-50">CoStudy</a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand text-white-50" href="/">CoStudy</a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse"
                 id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link text-white-50 active" href="/index">Home</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link text-white-50 " href="/">Home</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link text-white-50" href="/about">About Us</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link text-white-50" href="/login">Login</a></li>
                 </ul>
